syntax = "proto3";

option go_package = "./;discordproto";

service discord {
  rpc SendMsgToChannel (SendMsgToChannelRequest) returns (SendMsgToChannelResponse);

  rpc SendMsgToPrivateChannel (SendMsgToPrivateChannelRequest) returns (SendMsgToPrivateChannelResponse);

  rpc ReadUserRoles (ReadUserRolesRequest) returns (ReadUserRolesResponse);
}

message SendMsgToChannelRequest {
  string channel_id = 1;
  string sender_id = 2;
  string content = 3;
  string idempotency_key = 4;
  bool force = 5;
}

message SendMsgToChannelResponse {}

message SendMsgToPrivateChannelRequest {
  string user_id = 1;
  string sender_id = 2;
  string content = 3;
  string idempotency_key = 4;
  bool force = 5;
}

message SendMsgToPrivateChannelResponse{}

message Role {
  string role_id = 1;
  string role_name = 2;
}

message ReadUserRolesRequest {
  string user_id = 1;
}
message ReadUserRolesResponse {
  repeated Role roles = 1;
}
